    * 3982 FIX: Some MKPs created with WATO could not be uploaded to the Check_MK Exchange

    Notifications:
    * 4042 FIX: Fix missing From address in synchronous SMTP notifications...

    Livestatus:
    * 3651 FIX: Fixed potential segfault with Nagios core when accessing log/commands table via Livestatus....

    HW/SW-Inventory:
    * 4066 FIX: Fixed broken titles of nodes in inventory views
    * 4067 FIX: Fixed broken inventory history view in current master...


1.4.0i2:
    Core & Setup:
    * 4036 Measurement of time used by Check_MK now includes time waited for agent...
    * 3648 FIX: Fixed log file parsing of host states...
    * 3965 FIX: Nagios: Improved handling of broken core config...

    Checks & Agents:
    * 3841 cups_queues: thresholds are now configurable in WATO...
    * 3910 oracle_instance: noarchivelog can now be ignored
    * 3911 if.include: each operational state can now be mapped to a check state
    * 3912 elphase.include: now device states can be mapped to monitoring states
    * 3913 gude_powerbanks, gude_relayport, gude_temp, gude_humidity: new checks for Gude Power Control devices
    * 3954 postfix_mailq_status: new check which monitors the status of postfix mail instances
    * 3945 fortigate_node: Memory on fortigate clusters are now configurable by WATO...
    * 3956 fileinfo.groups: now allows regular expressions within include and exclude patterns each beginning with a tilde
    * 3947 mssql_blocked_sessions: thresholds for wait time can be set now...
    * 3830 netapp_api_luns: new check to monitor the filesystem usage of LUNs
    * 3949 ucd_cpu_load: Genugate devices are now displaying CPU load...
    * 3950 openbsd_sensors: Genugate devices are now handling hardware sensors...
    * 3749 storcli_pdisks, storcli_vdrives: New checks to monitor RAID status via StorCLI utility
    * 3988 Windows agent: new global option disabled_sections...
    * 3989 Logwatch patterns: now able to change state of context lines...