@@ -1,0 +1,9 @@
+Title: History view: Only showing removed/added entries tables when there are entries
+Level: 1
+Component: inv
+Compatible: compat
+Version: 1.4.0i3
+Date: 1479072597
+Class: fix
+
+
